TG-32 añadido archivo local de bootstrap aislado

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Hormigón ERP</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://toert.github.io/Isolated-Bootstrap/versions/4.0.0-beta/iso_bootstrap4.0.0min.css">
+    <link rel="stylesheet" href="/static/iso_bootstrap4.0.0min.css">
   </head>
   <body style="margin: 0 auto">
     <div id="app"></div>
